# clecbit

./: README.md  clecbit.cabal  odds_en.xml  stack.yaml
app/: Main.hs
src/: Lib.hs
src/ClecBit/: Bet.hs  Parse.hs  XML.hs
src/ClecBit/Parse/: Football.hs  Parsable.hs
test/: Spec.hs  example.xml  exampleBets.xml  exampleEvent.xml  exampleSport.xml  exampleSports.xml
