name:                clecbit
version:             0.2.1.0
-- synopsis:
-- description:
homepage:            https://github.com/vquintin/clecbit#readme
license:             BSD3
license-file:        LICENSE
author:              Virgile Quintin
maintainer:          virgile.quintin@gmail.com
copyright:           2017 Virgile Quintin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ClecBit.XML
                     , ClecBit.Bet
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.8.1
                     , containers == 0.5.7.1
                     , hxt == 9.3.1.16
                     , time == 1.6.0.1
                     , http-conduit == 2.2.3.2
                     , hbet == 0.2.3.0
                     , split == 0.2.3.2
  default-language:    Haskell2010

executable clecbit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clecbit
  default-language:    Haskell2010

test-suite clecbit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clecbit
                     , containers == 0.5.7.1
                     , HUnit == 1.5.0.0
                     , hxt == 9.3.1.16
                     , time == 1.6.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vquintin/clecbit
